Fikser noen sonarissues